log/build_2023-02-01_13-18-27/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/buildBestPath.py", line 32
    edges = []]
              ^
SyntaxError: unmatched ']'

